--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
     <body>
    
 <header>
-
+    <select name="difficolta" id="difficulty">
+    <option value="ez">easy</option>
+    <option value="mid">medium</option>
+    <option value="tryhard">hard</option>
+  </select>
+    <button type="button" id = "swag">SWAGGER PLAY</button>
 </header>
 
 <main>
-   <div class="layout-container">
+   <div class="square-container">
     
    </div> 
 </main>
@@ -22,4 +27,4 @@
 
         <script src="./js/script.js"></script>
     </body>
-</html>
+</html
